--- a/PlainQueryExtensions.Tests/PlainQueryExtensions.Tests.csproj
+++ b/PlainQueryExtensions.Tests/PlainQueryExtensions.Tests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
         <PackageReference Include="dbup-core" Version="4.5.0" />
         <PackageReference Include="dbup-sqlserver" Version="4.5.0" />
     </ItemGroup>
@@ -29,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PlainDataAccess\PlainDataAccess.csproj" />
+      <ProjectReference Include="..\PlainQueryExtensions\PlainQueryExtensions.csproj" />
     </ItemGroup>
 
 </Project>
