--- a/PlainQueryExtensions/PlainQueryExtensions.csproj
+++ b/PlainQueryExtensions/PlainQueryExtensions.csproj
@@ -8,5 +8,9 @@
     <ItemGroup>
       <ProjectReference Include="..\PlainQuery\PlainQuery.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Dapper" Version="2.0.78" />
+    </ItemGroup>
     
 </Project>
