--- a/Dapper.Addition.PostgreSql.Tests/Dapper.Addition.PostgreSql.Tests.csproj
+++ b/Dapper.Addition.PostgreSql.Tests/Dapper.Addition.PostgreSql.Tests.csproj
@@ -33,7 +33,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Dapper.Addition.PostgreSql\Dapper.Addition.PostgreSql.csproj" />
         <ProjectReference Include="..\Dapper.Addition.Shared.Tests\Dapper.Addition.Shared.Tests.csproj" />
-        <ProjectReference Include="..\SavedTransactionScope.PostgreSql\SavedTransactionScope.PostgreSql.csproj" />
+        <ProjectReference Include="..\SavepointHandlers.PostgreSql\SavepointHandlers.PostgreSql.csproj" />
     </ItemGroup>
     
 </Project>
