--- a/Dapper.Addition.Shared.Tests/Dapper.Addition.Shared.Tests.csproj
+++ b/Dapper.Addition.Shared.Tests/Dapper.Addition.Shared.Tests.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Dapper.Addition\Dapper.Addition.csproj" />
-      <ProjectReference Include="..\SavedTransactionScopes\SavedTransactionScopes.csproj" />
+      <ProjectReference Include="..\SavepointHandlers\SavepointHandlers.csproj" />
     </ItemGroup>
 
 </Project>
