--- a/SavepointHandlers.SqlServer/SavepointHandlers.SqlServer.csproj
+++ b/SavepointHandlers.SqlServer/SavepointHandlers.SqlServer.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SavedTransactionScopes\SavedTransactionScopes.csproj" />
+      <ProjectReference Include="..\SavepointHandlers\SavepointHandlers.csproj" />
     </ItemGroup>
-    
+
 </Project>
