--- a/Dapper.Addition.SqlServer/Dapper.Addition.SqlServer.csproj
+++ b/Dapper.Addition.SqlServer/Dapper.Addition.SqlServer.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors />
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <RepositoryUrl>https://github.com/AVPolyakov/Dapper.Addition</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
